--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Web development learning with front (HTML/CSS/JS) & back end (Node/Express/EJS/API) & database(SQL/mongoDB))
 
+Basics folder => each course content folders. Folder names are named after course learning goal.
+XPS Desktop => assignment/challange code completed folders. Folder names are named after challange learning goal.
+learning notes pdf => course notes 
