--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Web development learning with front (HTML/CSS/JS) & back end (Node/Express/EJS/API) & database(SQL/mongoDB))
+Web development learning with front (HTML/CSS/JS/jquery) & back end (Node/Express/EJS/API) & database(SQL/mongoDB))
 
 Basics folder => each course content folders. Folder names are named after course learning goal.
 XPS Desktop => assignment/challange code completed folders. Folder names are named after challange learning goal.
