update from local

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Web development learning with front (HTML/CSS/JS/jquery/bootstrap) & back end (N
 
 Basics folder => each course content folders. Folder names are named after course learning goal.
 XPS Desktop => assignment/challange code completed folders. Folder names are named after challange learning goal.
-learning notes pdf => course notes 
+learning notes pdf => course note
